fixed scroll issues on iOS

--- a/src/pages/tarjetasTitulos/CardModal/cardModal.module.scss
+++ b/src/pages/tarjetasTitulos/CardModal/cardModal.module.scss
@@ -17,8 +17,6 @@
   animation: fadeIn 0.4s;
   animation-timing-function: cubic-bezier(0.82, 0, 0.28, 0.99);
 
-  touch-action: manipulation;
-
   @include tablet-up {
     align-items: center;
   }
